# harold

./: .flake8  .gitignore  .travis.yml  CHANGES.txt  DESCRIPTION.rst  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  harold.py  pyproject.toml  readthedocs.yml  requirements.txt  rtd_req_list.txt  rtd_rrq_list.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: linux.yml  test_matrix.yml  tests.yml
docs/: Makefile  aut_gen_ref.rst  conf.py  faq.rst  function_reference.rst  harold.rst  index.rst  intro.rst  make.bat  modules.rst  preflight.rst  primer.rst  tut_convert.rst  tut_discrete.rst  tut_freq_domain.rst  tut_kalman.rst  tut_model_props.rst  tut_models.rst  tut_polyfuncs.rst  tut_solvers.rst  tut_time_domain.rst  tutorial.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  faq.doctree  harold.doctree  index.doctree  intro.doctree  modules.doctree  preflight.doctree  setup.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  changelog.html  faq.html  genindex.html  harold.html  index.html  intro.html  modules.html  objects.inv  preflight.html  py-modindex.html  search.html  searchindex.js  setup.html  tutorial.html
docs/_build/html/_sources/: changelog.txt  index.txt  modules.txt  preflight.txt  tutorial.txt
harold/: __init__.py  _arg_utils.py  _array_validators.py  _aux_linalg.py  _bd_algebra.py  _classes.py  _discrete_funcs.py  _frequency_domain.py  _frequency_domain_plots.py  _global_constants.py  _kalman_ops.py  _polynomial_ops.py  _routh_array.py  _solvers.py  _static_ctrl_design.py  _system_funcs.py  _system_props.py  _time_domain.py  _time_domain_plots.py  _version.py  harold.py
harold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
harold/tests/: test_array_validators.py  test_aux_linalg.py  test_bd_algebra.py  test_classes.py  test_discretize.py  test_frequency_domain.py  test_frequency_domain_plots.py  test_harold.py  test_kalman_ops.py  test_polynomial_ops.py  test_routh_array.py  test_solvers.py  test_static_ctrl_design.py  test_system_funcs.py  test_system_props.py  test_time_domain.py  test_time_domain_plots.py
notebooks/: harold_introduction.ipynb
tests/: test_harold.py
