# pyproject.toml

[project]
name = "harold"
license = {file = "LICENSE.txt"}
description = """
An open-source systems and controls toolbox for Python3.
"""

maintainers = [
    {name = "Ilhan Polat", email = "harold.of.python@gmail.com"},
]

requires-python = ">=3.8"

dependencies = [
	"scipy>=1.8.0",
	"matplotlib",
	"tabulate"
]

readme = "README.rst"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "flake8"
]

doc = [
    "sphinx",
	"cloud_sptheme",
    "numpydoc",
]

[project.urls]
homepage = "https://github.com/ilayn/harold"
documentation = "https://harold.readthedocs.org"
source = "https://github.com/ilayn/harold"
download = "https://github.com/ilayn/harold/releases"
tracker = "https://github.com/ilayn/harold/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "harold/tests"
]

[tool.poetry]
name = "harold"
version = "1.0.2"
description = "An open-source systems and controls toolbox for Python3."
authors = ["Ilhan Polat <ilhanpolat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scipy = "^1.8.0"
matplotlib = "^3.4.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
